syntax = "proto2";

package atm0s.media_endpoint_log;

// F32p2 is used to represent a floating point number with the precision of 2. 
message F32p2 {
  required uint32 value = 1;
}

message Stats {
  required F32p2 min = 1;
  required F32p2 avg = 2;
  required F32p2 max = 3;
}

message SessionEvent {
  message Location {
    required F32p2 lat = 1;
    required F32p2 lng = 2;
  }
  message SessionRouting {
    required string user_agent = 1;
    required uint32 gateway_node_id = 2;
  }

  message SessionRoutingError {
    required string reason = 1;
    required uint32 gateway_node_id = 2;
    repeated uint32 media_node_ids = 3;
  }

  message SessionRouted {
    required uint32 after_ms = 1;
    required uint32 media_node_id = 2;
  }

  message SessionConnecting {
    required string user_agent = 1;
    optional string remote = 2;
  }

  message SessionConnectError {
    optional string remote = 1;
    required string error_code = 2;
    required string error_message = 3;
  }

  message SessionConnected {
    optional string remote = 1;
    required uint32 after_ms = 2;
  }

  message SessionReconnecting {
    required string reason = 1;
  }

  message SessionReconnected {
    optional string remote = 1;
  }

  message SessionDisconnected {
    optional string error = 1;
    required uint64 sent_bytes = 2;
    required uint64 received_bytes = 3;
    required uint64 duration_ms = 4;
    required F32p2 rtt = 5;
  }

  message SessionStats {
    required uint64 received_bytes = 1;
    required uint32 receive_limit_bitrate = 2;
    required uint64 sent_bytes = 3;
    required uint32 send_est_bitrate = 4;
    required uint32 rtt = 5;
  }

  required string ip = 1;
  optional string version = 2;
  optional Location location = 3;
  required bytes token = 4;
  required uint64 ts = 5;
  required uint64 session_uuid = 6;
  oneof event {
    SessionRouting routing = 7;
    SessionRoutingError routing_error = 8;
    SessionRouted routed = 9;
    SessionConnecting connecting = 10;
    SessionConnectError connect_error = 11;
    SessionConnected connected = 12;
    SessionReconnecting reconnecting = 13;
    SessionReconnected reconnected = 14;
    SessionDisconnected disconnected = 15;
    SessionStats stats = 16;
  }
}

message MediaStreamIssueConnectivity {
  required F32p2 mos = 1;
  required F32p2 lost_percents = 2;
  required F32p2 jitter_ms = 3;
  required uint32 rtt_ms = 4;
}

enum MediaKind {
  AUDIO = 0;
  VIDEO = 1;
}

message ReceiveStreamEvent {
  message ReceivedStreamStarted {
    required string name = 1;
    required MediaKind kind = 2;
    required string remote_peer = 3;
    required string remote_stream = 4;
  }

  message ReceivedStreamIssue {
    required string name = 1;
    required MediaKind kind = 2;
    required string remote_peer = 3;
    required string remote_stream = 4;
    oneof issue {
      MediaStreamIssueConnectivity connectivity = 5;
    }
  }

  message ReceivedStreamStats {
    required string name = 1;
    required MediaKind kind = 2;
    required uint32 limit_bitrate = 3;
    required uint64 received_bytes = 4;
    required bool freeze = 5;
    optional F32p2 mos = 6;
    optional F32p2 lost = 7;
    optional F32p2 jitter = 8;
    optional uint32 rtt = 9;
  }

  message ReceivedStreamEnded {
    required string name = 1;
    required MediaKind kind = 2;
    required uint64 sent_bytes = 3;
    required uint32 freeze_count = 4;
    required uint64 duration_ms = 5;
    optional Stats mos = 6;
    optional Stats lost = 7;
    optional Stats jitter = 8;
    optional Stats rtt = 9;
  }

  required bytes token = 1;
  required uint64 ts = 2;
  required uint64 session_uuid = 3;
  oneof event {
    ReceivedStreamStarted started = 4;
    ReceivedStreamIssue issue = 5;
    ReceivedStreamStats stats = 6;
    ReceivedStreamEnded ended = 7;
  }
}

message SendStreamEvent {
  message SendStreamStarted {
    required string name = 1;
    required MediaKind kind = 2;
    required string remote_peer = 3;
    required string remote_stream = 4;
  }

  message SendStreamIssue {
    required string name = 1;
    required MediaKind kind = 2;
    required string remote_peer = 3;
    required string remote_stream = 4;
    oneof issue {
      MediaStreamIssueConnectivity connectivity = 5;
    }
  }

  message SendStreamStats {
    required string name = 1;
    required MediaKind kind = 2;
    required uint64 sent_bytes = 3;
    required bool freeze = 4;
    optional F32p2 mos = 5;
    optional F32p2 lost = 6;
    optional F32p2 jitter = 7;
    optional uint32 rtt = 8;
  }

  message SendStreamEnded {
    required string name = 1;
    required MediaKind kind = 2;
    required uint64 received_bytes = 3;
    required uint32 freeze_count = 4;
    required uint64 duration_ms = 5;
    optional Stats mos = 6;
    optional Stats lost = 7;
    optional Stats jitter = 8;
    optional Stats rtt = 9;
  }
 
  required bytes token = 1;
  required uint64 ts = 2;
  required uint64 session_uuid = 3;
  oneof event {
    SendStreamStarted started = 4;
    SendStreamIssue issue = 5;
    SendStreamStats stats = 6;
    SendStreamEnded ended = 7;
  }
}

message MediaEndpointLogRequest {
  oneof event {
    SessionEvent session_event = 1;
    ReceiveStreamEvent receive_stream_event = 2;
    SendStreamEvent send_stream_event = 3;
  }
}

